Add Dockerfile for Dokploy deployment

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,26 +1,11 @@
-# Ignore Git and GitHub files
+node_modules
 .git
-.github/
-
-# Ignore Husky configuration files
-.husky/
-
-# Ignore documentation and metadata files
-CONTRIBUTING.md
-LICENSE
-README.md
-
-# Ignore environment examples and sensitive info
+.github
+.vscode
+*.md
 .env
-*.local
-*.example
-
-# Ignore node modules, logs and cache files
-**/*.log
-**/node_modules
-**/dist
-**/build
-**/.cache
-logs
-dist-ssr
-.DS_Store
+.env.local
+dist
+.output
+coverage
+.turbo
