--- a/.env.production
+++ b/.env.production
@@ -140,3 +140,5 @@ VITE_SUPABASE_ACCESS_TOKEN=
 # DEFAULT_NUM_CTX=12288 # Consumes 26GB of VRAM
 # DEFAULT_NUM_CTX=6144 # Consumes 24GB of VRAM
 DEFAULT_NUM_CTX=
+
+VITE_HMR_HOST=bolt.tecnl.es
